--- a/blogs/templates/blogs/post_detail.html
+++ b/blogs/templates/blogs/post_detail.html
@@ -1,10 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% load markdown_extras %}
+{% load static %}
 
-</body>
-</html>
+{% block content %}
+    <h2>{{ post.title }}</h2>
+    <p>{{ post.content | markdown | safe }}</p>
+{% endblock content %}
+
+{% block sidebar %}
+    <div class="position-sticky" style="top: 2rem;">
+        <div class="bd-toc mt-3 mb-5 my-lg-0 ps-xl-3 mb-lg-5 text-muted">
+            <strong class="d-none d-md-block h6 my-2">On this page</strong>
+            <hr class="d-none d-md-block my-2">
+            <div class="overflow-scroll hide-scrollbar scrollbar-color">
+                {{ post.table_of_contents | markdown_toc | safe }}
+            </div>
+        </div>
+    </div>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+{% endblock %}
