--- a/blogs/templates/blogs/search_results.html
+++ b/blogs/templates/blogs/search_results.html
@@ -1,10 +1,57 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base.html" %}
 
-</body>
-</html>
+{% block content %}
+
+    <h3 class="pb-4 mb-4 fst-italic border-bottom">
+        Articles
+    </h3>
+    {% for post in post_list %}
+        <article class="blog-post">
+            <h2 class="blog-post-title mb-1">
+                <a href="{% url 'blogs:post' post.slug %}" style="text-decoration: none"
+                   class="text-black">
+                    {{ post.title }}
+                </a>
+            </h2>
+            <p class="blog-post-meta">{{ post.pub_date.date }}</p>
+
+            <hr>
+            <p>{{ post.overview }}</p>
+        </article>
+    {% endfor %}
+
+    <nav class="blog-pagination" aria-label="Pagination">
+        {% if page_obj.has_previous %}
+            <a class="btn btn-outline-primary rounded-pill"
+               href="?page={{ page_obj.previous_page_number }}">Newer</a>
+        {% else %}
+            <a class="btn btn-outline-secondary rounded-pill disabled">Newer</a>
+        {% endif %}
+        {% if page_obj.has_next %}
+            <a class="btn btn-outline-primary rounded-pill"
+               href="?page={{ page_obj.paginator.num_pages }}">Older</a>
+        {% else %}
+            <a class="btn btn-outline-secondary rounded-pill disabled">Older</a>
+        {% endif %}
+    </nav>
+
+{% endblock %}
+
+{% block sidebar %}
+    <div class="position-sticky" style="top: 2rem;">
+        <div class="p-4 mb-3 bg-light rounded">
+            <h4 class="fst-italic">Articles Found:</h4>
+            <p class="mb-0">15</p>
+            <h4 class="fst-italic">Categories:</h4>
+        </div>
+
+        <div class="p-4">
+            <h4 class="fst-italic">Elsewhere</h4>
+            <ol class="list-unstyled">
+                <li><a href="https://github.com/CodeSwallow" target="_blank" rel="noopener noreferrer">GitHub</a></li>
+                <li><a href="https://www.youtube.com/channel/UC8rldZMylIg77fGBk_tAqPw" target="_blank"
+                       rel="noopener noreferrer">YouTube</a></li>
+            </ol>
+        </div>
+    </div>
+{% endblock %}
