--- a/blogs/templates/blogs/search_results.html
+++ b/blogs/templates/blogs/search_results.html
@@ -46,12 +46,7 @@
         </div>
 
         <div class="p-4">
-            <h4 class="fst-italic">Elsewhere</h4>
-            <ol class="list-unstyled">
-                <li><a href="https://github.com/CodeSwallow" target="_blank" rel="noopener noreferrer">GitHub</a></li>
-                <li><a href="https://www.youtube.com/channel/UC8rldZMylIg77fGBk_tAqPw" target="_blank"
-                       rel="noopener noreferrer">YouTube</a></li>
-            </ol>
+            <h4 class="fst-italic">More Info?</h4>
         </div>
     </div>
 {% endblock %}
