--- a/blogs/templates/blogs/post_detail.html
+++ b/blogs/templates/blogs/post_detail.html
@@ -3,8 +3,40 @@
 {% load static %}
 
 {% block content %}
-    <h2>{{ post.title }}</h2>
+    <h1>{{ post.title }}</h1>
     <p>{{ post.content | markdown | safe }}</p>
+    <hr class="d-none d-md-block my-2 mt-5 mb-2">
+
+    <h3>Comments</h3>
+    {% for comment in post.comments.all %}
+        {% if not comment.reply_to %}
+            <div class="mt-4 mb-2">
+                <div class="row">
+                    <div class="col-8 d-flex">
+                        <h5>{{ comment.author }}</h5>
+                        <span>- {{ comment.post_date }}</span>
+                    </div>
+                    <div class="col-4 text-end">
+                            <a href="#">reply</a>
+                    </div>
+                </div>
+                {{ comment.description }}
+            </div>
+            {% if comment.replies %}
+                {% for reply in comment.replies.all %}
+                    <div class="ms-5 mb-3">
+                            <div class="row">
+                                <div class="d-flex">
+                                    <h6>{{ reply.author }}</h6>
+                                    <span>- {{ reply.post_date }}</span>
+                                </div>
+                            </div>
+                            {{ reply.description }}
+                    </div>
+                {% endfor %}
+            {% endif %}
+        {% endif %}
+    {% endfor %}
 {% endblock content %}
 
 {% block sidebar %}
