--- a/blogs/templates/blogs/featured.html
+++ b/blogs/templates/blogs/featured.html
@@ -8,36 +8,18 @@
                 aria-label="Slide 3"></button>
     </div>
     <div class="carousel-inner">
-        <div class="carousel-item active">
-            <div class="p-5 p-md-5 mb-4 rounded text-bg-dark bg-gradient">
-                <div class="col-md-10 p-5">
-                    <h1 class="display-4 fw-bold">{{ featured.title }}</h1>
-                    <p class="lead my-3">{{ featured.overview }}</p>
-                    <p class="lead mb-0"><a href="#" class="text-white fw-bold">Continue
-                        reading...</a></p>
+        {% for f in featured %}
+            <div class="carousel-item {% if f == featured|first %}active{% endif %}">
+                <div class="px-5 p-md-5 mb-4 rounded text-bg-dark bg-gradient" style="height: 300px">
+                    <div class="col-md-10 px-5">
+                        <h1 class="display-4 fw-bold">{{ f.title }}</h1>
+                        <p class="lead my-3">{{ f.overview }}</p>
+                        <p class="lead mb-0"><a href="#" class="text-white fw-bold">Continue
+                            reading...</a></p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="carousel-item">
-            <div class="p-4 p-md-5 mb-4 rounded text-bg-dark bg-gradient">
-                <div class="col-md-10 p-5">
-                    <h1 class="display-4 fw-bold">{{ featured.title }}</h1>
-                    <p class="lead my-3">{{ featured.overview }}</p>
-                    <p class="lead mb-0"><a href="#" class="text-white fw-bold">Continue
-                        reading...</a></p>
-                </div>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <div class="p-4 p-md-5 mb-4 rounded text-bg-dark bg-gradient">
-                <div class="col-md-10 p-5">
-                    <h1 class="display-4 fw-bold">{{ featured.title }}</h1>
-                    <p class="lead my-3">{{ featured.overview }}</p>
-                    <p class="lead mb-0"><a href="#" class="text-white fw-bold">Continue
-                        reading...</a></p>
-                </div>
-            </div>
-        </div>
+        {% endfor %}
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators"
             data-bs-slide="prev">
