--- a/blogs/templates/blogs/search_results.html
+++ b/blogs/templates/blogs/search_results.html
@@ -40,8 +40,8 @@
 {% block sidebar %}
     <div class="position-sticky" style="top: 2rem;">
         <div class="p-4 mb-3 bg-light rounded">
-            <h4 class="fst-italic">Articles Found:</h4>
-            <p class="mb-0">15</p>
+            <h4 class="fst-italic">Articles Found</h4>
+            <p class="mb-0">{{ post_list|length }}</p>
             <h4 class="fst-italic">Categories:</h4>
         </div>
 
