--- a/blogs/templates/blogs/featured.html
+++ b/blogs/templates/blogs/featured.html
@@ -10,7 +10,7 @@
     <div class="carousel-inner">
         {% for f in featured %}
             <div class="carousel-item {% if f == featured|first %}active{% endif %}">
-                <div class="px-5 p-md-5 mb-4 rounded text-bg-dark bg-gradient" style="height: 300px">
+                <div class="px-5 p-md-5 mb-4 rounded text-bg-success bg-gradient" style="height: 300px">
                     <div class="col-md-10 px-5">
                         <h1 class="display-4 fw-bold">{{ f.title }}</h1>
                         <p class="lead my-3">{{ f.overview }}</p>
